--- a/templates/chartwitheventmarker.html
+++ b/templates/chartwitheventmarker.html
@@ -75,9 +75,9 @@
         // create second plot
         var volumePlot = chart.plot(1);
         // set yAxis labels formatter
-        volumePlot.yAxis().labels().format('{%Value}{scale:(1000)(1)|(k)}');
+        volumePlot.yAxis().labels().format('{{Value}}{scale:(1000)(1)|(k)}');
         // set crosshair y-label formatter
-        volumePlot.crosshair().yLabel().format('{%Value}{scale:(1000)(1)|(k)}');
+        volumePlot.crosshair().yLabel().format('{{Value}}{scale:(1000)(1)|(k)}');
 
         // create volume series on the plot
         var volumeSeries = volumePlot.column(mapping);
