--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -48,21 +48,21 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="get-start.html">Get Started</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="service.html">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="index">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="get-start">Get Started</a></li>
+                        <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio">Portfolio</a></li>
                         <li class="nav-item dropdown submenu">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Blog
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="single-blog">Blog Details</a></li>
+                                <li class="nav-item"><a class="nav-link" href="elements">Elements</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -82,7 +82,15 @@
 
        
         <!-- Chart Iframe Code -->
-        
+        <body>
+            <div id="container"></div>
+            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-base.min.js"></script>
+            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-ui.min.js"></script>
+            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-exports.min.js"></script>
+            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-stock.min.js"></script>
+            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-data-adapter.min.js"></script>
+            
+        </body>
 
         <!-- Chart Iframe Code -->
         
@@ -155,50 +163,7 @@
         </section>
         <!--================End Banner Area =================-->
         
-        <!--================Circle Chart Area =================-->
-        <section class="circle_chart_area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="circle_progress circular style-polygon" data-percentage="75" data-thickness="3" data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
-                            <div class="circle_progress_inner">
-                                <strong></strong>
-                                <span class="percentage"></span>
-                                <h4>Hard work</h4>
-                            </div> 
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="circle_progress circular style-polygon" data-percentage="83" data-thickness="3" data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
-                            <div class="circle_progress_inner">
-                                <strong></strong>
-                                <span class="percentage"></span>
-                                <h4>Creativity</h4>
-                            </div> 
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="circle_progress circular style-polygon" data-percentage="25" data-thickness="3" data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
-                            <div class="circle_progress_inner">
-                                <strong></strong>
-                                <span class="percentage"></span>
-                                <h4>Good luck</h4>
-                            </div> 
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="circle_progress circular style-polygon" data-percentage="95" data-thickness="3" data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
-                            <div class="circle_progress_inner">
-                                <strong></strong>
-                                <span class="percentage"></span>
-                                <h4>Development</h4>
-                            </div> 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--================End Circle Chart Area =================-->
+
         
         <!--================Service Solution Area =================-->
         <section class="service_solution_area p_100">
