--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item active"><a class="nav-link" href="index">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="get-start">Get Started</a></li>
-                        <li class="nav-item"><a class="nav-link" href="service">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                         <li class="nav-item"><a class="nav-link" href="portfolio">Portfolio</a></li>
                         <li class="nav-item dropdown submenu">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
