--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -27,12 +27,26 @@
         <link href="css/style.css" rel="stylesheet">
         <link href="css/responsive.css" rel="stylesheet">
 
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+
+        <meta charset="UTF-8">
+        <meta content="IE=edge" http-equiv="X-UA-Compatible">
+        <meta content="width=device-width, initial-scale=1" name="viewport">
+        <title>Candlestick Chart</title>
+        <link href="https://playground.anychart.com/gallery/Stock_Event_Markers/Stock_Chart_with_Event_Markers/iframe" rel="canonical">
+        <meta content="AJAX Chart,Candlestick Chart,Chart from CSV,Chart using CSV,Financial Chart,Japanese Candlestick Chart,Stock Chart" name="keywords">
+        <meta content="AnyChart - JavaScript Charts designed to be embedded and integrated" name="description">
         <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
+        <link href="https://cdn.anychart.com/releases/8.4.0/css/anychart-ui.min.css" rel="stylesheet" type="text/css">
+        <link href="https://cdn.anychart.com/releases/8.4.0/fonts/css/anychart-font.min.css" rel="stylesheet" type="text/css">
+        <style>html, body, #container {
+          width: 100%;
+          height: 100%;
+          margin: 0;
+          padding: 0;
+      }</style>
     </head>
     <body>
         
@@ -68,31 +82,146 @@
             </nav>
         </header>
         <!--================End Header Menu Area =================-->
+
+
+
         
         <!--================Banner Area =================-->
         <section class="banner_area">
             <div class="container">
                 <div class="banner_inner_text">
-                    <h2>Services</h2>
-                    <p>See what we do best</p>
+                    <h2>Machine Learning</h2>
+                    <p></p>
                 </div>
             </div>
         </section>
         <!--================End Banner Area =================-->
 
-       
-        <!-- Chart Iframe Code -->
-        <body>
-            <div id="container"></div>
-            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-base.min.js"></script>
-            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-ui.min.js"></script>
-            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-exports.min.js"></script>
-            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-stock.min.js"></script>
-            <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-data-adapter.min.js"></script>
-            
-        </body>
 
-        <!-- Chart Iframe Code -->
+
+        <!--================ First Chart Area =================-->
+
+        <div id="container"></div>
+        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-base.min.js"></script>
+        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-ui.min.js"></script>
+        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-exports.min.js"></script>
+        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-stock.min.js"></script>
+        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-data-adapter.min.js"></script>
+        <script type="text/javascript">anychart.onDocumentReady(function () {
+          // The data used in this sample can be obtained from the CDN
+          // https://cdn.anychart.com/samples/stock-event-markers/stock-chart-with-event-markers/data.csv
+          anychart.data.loadCsvFile('https://cdn.anychart.com/samples/stock-event-markers/stock-chart-with-event-markers/data.csv', function (data) {
+              // create data table on loaded data
+              var dataTable = anychart.data.table();
+              dataTable.addData(data);
+      
+              // map loaded data for the ohlc series
+              var mapping = dataTable.mapAs({'open': 1, 'high': 2, 'low': 3, 'close': 4, 'value': 7});
+      
+              // create stock chart
+              var chart = anychart.stock();
+      
+              // set chart title
+              chart.title('WTI Crude Oil Prices');
+      
+              // create first plot on the chart and set settings
+              var plot = chart.plot(0);
+              plot.height('75%')
+                  .yGrid(true)
+                  .xGrid(true)
+                  .yMinorGrid(true)
+                  .xMinorGrid(true);
+      
+              // create candlestick series
+              var series = plot.candlestick(mapping);
+              series.name('NYMEX Crude Oil Futures');
+              series.legendItem().iconType('rising-falling');
+      
+              // set settings for event markers
+              var eventMarkers = plot.eventMarkers();
+              // set markers data
+              eventMarkers.data([
+                  {date: '2001-09-11', description: '9-11 attacks'},
+                  {date: '2003-03-20', description: 'Iraq War'},
+                  {date: '2008-08-20', description: 'Global financial collapse'},
+                  {date: '2009-02-05', description: 'OPEC cuts production targets 4.2 mmbpd'},
+                  {date: '2009-11-15', description: 'Greece\'s debt crisis'},
+                  {date: '2011-03-11', description: 'Japan earthquake'},
+                  {date: '2014-12-01', description: 'Russian financial crisis'},
+                  {date: '2015-03-15', description: 'OPEC production quota unchanged'}
+              ]);
+      
+              // create second plot
+              var volumePlot = chart.plot(1);
+              // set yAxis labels formatter
+              volumePlot.yAxis().labels().format('{{Value}}{scale:(1000)(1)|(k)}');
+              // set crosshair y-label formatter
+              volumePlot.crosshair().yLabel().format('{{Value}}{scale:(1000)(1)|(k)}');
+      
+              // create volume series on the plot
+              var volumeSeries = volumePlot.column(mapping);
+              // set series settings
+              volumeSeries.name('Volume');
+      
+              // create scroller series with mapped data
+              chart.scroller().area(mapping);
+      
+              // set container id for the chart
+              chart.container('container');
+              // initiate chart drawing
+              chart.draw();
+      
+              // create range picker
+              var rangePicker = anychart.ui.rangePicker();
+              // init range picker
+              rangePicker.render(chart);
+      
+              // create range selector
+              var rangeSelector = anychart.ui.rangeSelector();
+              // init range selector
+              rangeSelector.render(chart);
+          });
+      });</script>
+    <!--================ End First Chart Area =================-->
+
+
+
+
+
+        <!--================Banner Area =================-->
+        <section class="banner_area">
+            <div class="container">
+                <div class="banner_inner_text">
+                    <h2>Build your Neural Network</h2>
+                    <p>Finding the Optimal Learning Rate and Epoch</p>
+                </div>
+            </div>
+        </section>
+        <!--================End Banner Area =================-->        
+
+        <!--================Dropdown Area =================-->
+
+               <div class="col-lg-3 col-md-6 col-xs-6">
+                <select name="location" class="app-select form-control" required>
+                    <option data-display="Choose locations">Epoch</option>
+                    <option value="1">25</option>
+                    <option value="2">50</option>
+                    <option value="3">100</option>
+                </select>
+            </div>
+            <div class="col-lg-3 col-md-6 col-xs-6">
+                <select name="property-type" class="app-select form-control" required>
+                    <option data-display="Property Type">Learning Rate</option>
+                    <option value="1">0.01</option>
+                    <option value="2">0.005</option>
+                </select>
+            </div>
+
+            <div class="col-lg-4 d-flex justify-content-end">
+                <button class="primary-btn">RUN<span class="lnr lnr-arrow-right"></span></button>
+            </div>
+            <!--================End Dropdown Area =================-->
+
         
         <!--================End Banner Area =================-->
         <section class="service_feature">
@@ -162,6 +291,9 @@
             </div>
         </section>
         <!--================End Banner Area =================-->
+
+
+        
         
 
         
