--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body>
-        
+    <body>        
         <!--================Header Menu Area =================-->
         <header class="main_menu_area">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +45,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item active"><a class="nav-link" href="index">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="get-start">Get Started</a></li>
                         <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                         <li class="nav-item"><a class="nav-link" href="portfolio">Portfolio</a></li>
