--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item active"><a class="nav-link" href="">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="get-start">Get Started</a></li>
+                        <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                         <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                         <li class="nav-item"><a class="nav-link" href="portfolio">Portfolio</a></li>
                         <li class="nav-item dropdown submenu">
@@ -358,27 +358,27 @@
             <div class="container">
                 <div class="c_title">
                     <img src="img/icon/title-icon.png" alt="">
-                    <h6>Discover the features</h6>
-                    <h2>We are young but bold</h2>
+                    <h6>Getting Started</h6>
+                    <h2>Three areas for analysis</h2>
                 </div>
                 <div class="row feature_inner">
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-1.png" alt="">
+                                <img src="img/icon/f-icon-2.png" alt="">
                             </div>
-                            <h4>Brand Identity</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Fundamental Analysis</h4>
+                            <p>Using concrete information about a company's business to try to find the real value of a stock.</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <div class="feature_item">
                             <div class="f_icon">
-                                <img src="img/icon/f-icon-2.png" alt="">
+                                <img src="img/icon/f-icon-1.png" alt="">
                             </div>
-                            <h4>Online Marketing</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Technical Analysis</h4>
+                            <p>Utilizes various charts and statistical indicators to determine price support/resistance, range and trends.</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -387,8 +387,8 @@
                             <div class="f_icon">
                                 <img src="img/icon/f-icon-3.png" alt="">
                             </div>
-                            <h4>Social Media</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Sentiment Analysis</h4>
+                            <p>Stock market prediction on the basis of public sentiments expressed on Twitter/FB/Other Social Media. </p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
