--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -48,8 +48,8 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item active"><a class="nav-link" href="index">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="get-start">Get Started</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                         <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                         <li class="nav-item"><a class="nav-link" href="portfolio">Portfolio</a></li>
                         <li class="nav-item dropdown submenu">
