--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -67,7 +67,7 @@
                     <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
-                    <li class="nav-item"><a class="nav-link" href="portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="portfolio">Comparison</a></li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
@@ -98,7 +98,12 @@
         </div>
     </section>
     <!--================End Banner Area =================-->
-
+    
+    <!--================ Video Area =================-->
+    <div class="c_video">
+        <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="img/icon/video-icon.png" alt="">   How does our Machine Learning Work </a>
+    </div>
+    <!--================ End Video Area =================-->
 
 
     <!--================ DIS Chart Area =================-->
