--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -99,7 +99,73 @@
     </section>
     <!--================End Banner Area =================-->
     
-    <!--================ Video Area =================-->
+    <!--================ Video Area =================--><!--================The Machine Learning Area =================-->
+    <section class="best_3d_area">
+        <div class="left_3d">
+            <div class="shap_slider_inner owl-carousel">
+                <div class="item">
+                    <h2>What is a Hidden Layer?</h2>
+                    <p>Hidden Layers are: </p>
+                    <div class="media">
+                        <img src="img/team/people/people-5.jpg" alt="">
+                        <div class="media-body">
+                            <h5># of Hidden Layers:</h5>
+                            <h6>4</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <h2>What are Epochs?</h2>
+                    <p>Epochs are: </p>
+                    <div class="media">
+                        <img src="img/team/people/people-5.jpg" alt="">
+                        <div class="media-body">
+                            <h5># Epochs used: </h5>
+                            <h6>1000</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <h2>What is the Learning Rate?</h2>
+                    <p>Learning Rate is: </p>
+                    <div class="media">
+                        <img src="img/team/people/people-5.jpg" alt="">
+                        <div class="media-body">
+                            <h5>Our Learning Rate: </h5>
+                            <h6>.003</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <h2>What is a neuron?</h2>
+                    <p>A Neuron is: </p>
+                    <div class="media">
+                        <img src="img/team/people/people-5.jpg" alt="">
+                        <div class="media-body">
+                            <h5># of Neurons used: </h5>
+                            <h6>between 32 and 256</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="right_text">
+            <div class="right_text_inner">
+                <div class="text_3d">
+                    <div class="l_title">
+                        <img src="img/icon/title-icon.png" alt="">
+                        <h6>Our Algorithm</h6>
+                        <h2>Adjusted Closing Price</h2>
+                    </div>
+                    <p>Our Neural Network utilizes the Random Forest Algorithm to predict next period prices.</p>
+                </div>
+                <div class="shap_mobile">
+                    <img src="img/iphone4.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================End The best slider Area =================-->
     <div class="c_video">
         <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="img/icon/video-icon.png" alt="">   How does our Machine Learning Work </a>
     </div>
