--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -57,10 +57,10 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
-                    <li class="nav-item"><a class="nav-link" href="portfolio">Comparison</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="comparison">Comparison</a></li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
@@ -93,7 +93,7 @@
 
 
     <!--================ Comparison Chart Area =================-->
-    <script src="{{url_for('static', filename='js/js_group/portfolio.js')}}"></script>
+    <script src="{{url_for('static', filename='js/js_group/comparison.js')}}"></script>
 
     <section class="graph_area_comparison">
         <div class="containter">
@@ -107,7 +107,6 @@
             </div>
         </div>
     </section>
-
 
     <!--================End Comparison Chart Area =================-->
 
