--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -49,10 +49,10 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="get-started">Get Started</a></li>
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
-                    <li class="nav-item"><a class="nav-link" href="portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
