--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                     <li class="nav-item active"><a class="nav-link" href="">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
-                    <li class="nav-item"><a class="nav-link" href="portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
