--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -28,6 +28,11 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
 
+    <!--D3-->
+    <script src="{{url_for('static', filename='js/d3.min.js')}}"></script>
+
+    <!--Plotly-->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -41,14 +46,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
-    <link href="https://cdn.anychart.com/releases/8.4.0/css/anychart-ui.min.css" rel="stylesheet" type="text/css">
-    <link href="https://cdn.anychart.com/releases/8.4.0/fonts/css/anychart-font.min.css" rel="stylesheet" type="text/css">
-    <style>html, body, #container {
-          width: 100%;
-          height: 100%;
-          margin: 0;
-          padding: 0;
-      }</style>
 </head>
 
 <body>
@@ -64,10 +61,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
-                    <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
-                    <li class="nav-item"><a class="nav-link" href="portfolio">Comparison</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
+                    <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
                     <li class="nav-item dropdown submenu">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
@@ -98,8 +95,9 @@
         </div>
     </section>
     <!--================End Banner Area =================-->
-    
-    <!--================ Video Area =================--><!--================The Machine Learning Area =================-->
+
+    <!--================ Video Area =================-->
+    <!--================The Machine Learning Area =================-->
     <section class="best_3d_area">
         <div class="left_3d">
             <div class="shap_slider_inner owl-carousel">
@@ -166,21 +164,21 @@
         </div>
     </section>
     <!--================End The best slider Area =================-->
-    <div class="c_video">
-        <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="img/icon/video-icon.png" alt="">   How does our Machine Learning Work </a>
-    </div>
+    <section class="video_area">
+        <div class="c_video">
+            <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="img/icon/video-icon.png"
+                    alt=""> How does our Machine Learning Work </a>
+        </div>
+    </section>
     <!--================ End Video Area =================-->
 
 
     <!--================ DIS Chart Area =================-->
-    <div id="container">
-        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-base.min.js"></script>
-        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-ui.min.js"></script>
-        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-exports.min.js"></script>
-        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-stock.min.js"></script>
-        <script src="https://cdn.anychart.com/releases/8.4.0/js/anychart-data-adapter.min.js"></script>
-        <script src="{{url_for('static', filename='js/js_group/machine_learning.js')}}"></script>
-    </div>
+    <section class="DIS-result-charts">
+        <div id="DIS_results">
+            <script src="{{url_for('static', filename='js/js_group/machine_learning.js')}}"></script>
+        </div>
+    </section>
     <!--================ End DIS Chart Area =================-->
 
 
