--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -37,11 +37,10 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Candlestick Chart</title>
-    <link href="https://playground.anychart.com/gallery/Stock_Event_Markers/Stock_Chart_with_Event_Markers/iframe" rel="canonical">
-    <meta content="AJAX Chart,Candlestick Chart,Chart from CSV,Chart using CSV,Financial Chart,Japanese Candlestick Chart,Stock Chart"
-        name="keywords">
-    <meta content="AnyChart - JavaScript Charts designed to be embedded and integrated" name="description">
+
+    <!--JQuery-->
+    <script src="{{url_for('static', filename='js/jquery-3.2.1.min.js')}}"></script>
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -204,11 +203,11 @@
                 <div class="row">
                     <div class="container">
                         <p>Epoch:</p>
-                        <select name="location" class="app-select form-control" required>
+                        <select name="location" class="app-select form-control" id="epoch_dropdown" required>
                             <option data-display="Choose locations">Epoch</option>
-                            <option value="1">25</option>
-                            <option value="2">50</option>
-                            <option value="3">100</option>
+                            <option value="10">10</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
                         </select>
                         <br>
                     </div>
@@ -216,10 +215,11 @@
                 <div class="row">
                     <div class="container">
                         <p>Learning Rate:</p>
-                        <select name="property-type" class="app-select form-control" required>
+                        <select name="property-type" class="app-select form-control" id="learnrate_dropdown" required>
                             <option data-display="Property Type">Learning Rate</option>
-                            <option value="1">0.01</option>
-                            <option value="2">0.005</option>
+                            <option value="0.001">0.001</option>
+                            <option value="0.002">0.002</option>
+                            <option value="0.003">0.003</option>
                         </select>
                         <br>
                     </div>
@@ -227,18 +227,19 @@
                 <div class="row">
                     <div class="container">
                         <p>Stock Ticker:</p>
-                        <select name="property-type" class="app-select form-control" required>
+                        <select name="property-type" class="app-select form-control" id="stock_dropdown" required>
                             <option data-display="Property Type">Company</option>
-                            <option value="1">APPL</option>
-                            <option value="2">CMG</option>
-                            <option value="2">DIS</option>
+                            <option value="AAPL">APPL</option>
+                            <option value="CMG">CMG</option>
+                            <option value="DIS">DIS</option>
                         </select>
                         <br>
                     </div>
                 </div>
                 <div class="row">
                     <div class="container">
-                        <button class="primary-btn">RUN<span class="lnr"></span></button>
+                        <button class="primary-btn" id="ml_button">RUN<span class="lnr"></span></button>
+                        <script src="{{url_for('static', filename='js/js_group/ml_button.js')}}"></script>
                     </div>
                 </div>
             </div>
@@ -250,7 +251,7 @@
             <div class="col-lg-10">
                 <div class="container">
                     <div class="row">
-                        <p>Hello, this is where my custom chart shows up</p>
+                        <div id="ml_manip"></div>
                     </div>
                 </div>
             </div>
