--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -34,6 +34,9 @@
     <!--Plotly-->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
+    <!--Graph JSScript-->
+    <script src="{{url_for('static', filename='js/js_group/comparison.js')}}"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -91,9 +94,8 @@
     <!--================End Banner Area =================-->
 
 
-
     <!--================ Comparison Chart Area =================-->
-    <script src="{{url_for('static', filename='js/js_group/comparison.js')}}"></script>
+    
 
     <section class="graph_area_comparison">
         <div class="containter">
