--- a/templates/chartwitheventmarker.html
+++ b/templates/chartwitheventmarker.html
@@ -62,14 +62,13 @@
         var eventMarkers = plot.eventMarkers();
         // set markers data
         eventMarkers.data([
-            {date: '2001-09-11', description: '9-11 attacks'},
-            {date: '2003-03-20', description: 'Iraq War'},
-            {date: '2008-08-20', description: 'Global financial collapse'},
-            {date: '2009-02-05', description: 'OPEC cuts production targets 4.2 mmbpd'},
-            {date: '2009-11-15', description: 'Greece\'s debt crisis'},
-            {date: '2011-03-11', description: 'Japan earthquake'},
-            {date: '2014-12-01', description: 'Russian financial crisis'},
-            {date: '2015-03-15', description: 'OPEC production quota unchanged'}
+            {date: '2015-06-10', description: 'Inside Out'},
+            {date: '2015-08-01', description: 'Q2 F/S Report missed Wall Street Estimates'},
+            {date: '2016-03-04', description: 'Zootopia'},            
+            {date: '2016-06-16', description: 'Opening Shanghai Disney Resort'},
+            {date: '2017-05-27', description: 'Pandora The World of AVATAR Opening '},
+            {date: '2017-11-22', description: 'Coco'},
+            {date: '2018-06-30', description: 'Toy Story Land Opening'},
         ]);
 
         // create second plot
