--- a/templates/index.html
+++ b/templates/index.html
@@ -57,11 +57,12 @@
                             aria-haspopup="true" aria-expanded="false">
                             Blog
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <!-- #### We will be adding a blog section for Dec 5 presentation...#### >
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li class="nav-item"><a class="nav-link" href="blog">Blog</a></li>
                             <li class="nav-item"><a class="nav-link" href="single-blog">Blog Details</a></li>
                             <li class="nav-item"><a class="nav-link" href="elements">Elements</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                 </ul>
@@ -87,8 +88,7 @@
                             data-fontsize="['72','72','72','50','50','30']" data-lineheight="['82','82','82','62','62','42']"
                             data-width="['none']" data-height="none" data-whitespace="nowrape" data-type="text"
                             data-responsive_offset="on" data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-                            data-textAlign="['left','left','left','left','left','center']">Choose a powerful <br />design
-                            for your Start-up</div>
+                            data-textAlign="['left','left','left','left','left','center']">An Algorithmic Approach <br />to Stock Trading</div>
 
                         <div class="tp-caption tp-resizeme secand_text" data-x="['left','left','left','left','15','center']"
                             data-hoffset="['0','80','80','0']" data-y="['top','top','top','top']" data-voffset="['575','575','575','400','320','300']"
@@ -104,7 +104,7 @@
                             data-fontsize="['14','14','14','14']" data-lineheight="['46','46','46','46']" data-width="none"
                             data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on"
                             data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-                            <a class="more_btn" href="#">Discover</a>
+                            <a class="more_btn" href="/get-started">Discover</a>
                         </div>
                         <div class="tp-caption tp-resizeme single_img" data-x="['right','right','right','right','right','right']"
                             data-hoffset="['0','0','0','0']" data-y="['top','top','top','top']" data-voffset="['180','180','180','180','0']"
