--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -69,11 +69,11 @@
                             aria-haspopup="true" aria-expanded="false">
                             Blog
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li class="nav-item"><a class="nav-link" href="blog">Blog</a></li>
                             <li class="nav-item"><a class="nav-link" href="single-blog">Blog Details</a></li>
                             <li class="nav-item"><a class="nav-link" href="elements">Elements</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                 </ul>
