front-end cleanup

--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Machine Learning Group 1</title>
+    <title>Stock Epoch-Alypse</title>
 
     <!-- Icon css link -->
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -83,8 +83,6 @@
 
 
     <!--================ Comparison Chart Area =================-->
-    
-
     <section class="graph_area_comparison">
         <div class="containter">
             <div class="row">
@@ -97,7 +95,6 @@
             </div>
         </div>
     </section>
-
     <!--================End Comparison Chart Area =================-->
 
 
