--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Machine Learning Group 1</title>
+    <title>Stock Epoch-Alypse</title>
 
     <!-- Icon css link -->
     <link href="css/font-awesome.min.css" rel="stylesheet">
